<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextUsername"
        android:maxLength="10"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_admin_username_hint"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_admin_password_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonLoginSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_admin_login_btn"/>
</LinearLayout>
