<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageButton
            android:id="@+id/btn_dash_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/menu_icon"
            android:contentDescription="@string/txt_menu_dash_menu" />

        <ImageButton
            android:id="@+id/btn_dash_list"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_below="@+id/btn_graph_menu"
            android:background="@drawable/r"
            android:contentDescription="@string/txt_menu_dash_list" />

        <ImageButton
            android:id="@+id/btn_graph_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_below="@+id/btn_dash_menu"
            android:background="@drawable/graph_icon"
            android:contentDescription="@string/txt_menu_dash_graph" />

        <ImageButton
            android:id="@+id/btn_home_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_above="@+id/btn_settings"
            android:background="@drawable/home_icon"
            android:contentDescription="@string/txt_menu_dash_home" />

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:background="@drawable/settings_foreground"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/txt_menu_dash_settings" />

    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frg_con_dash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/linearLayout" />

</RelativeLayout>
