<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Settings"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_menu"
        android:layout_gravity="center"
        android:textSize="100sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="10"
        android:rowCount="10"
        android:padding="8dp">

        <Space
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_row="0"/>
        <Space
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_row="1"/>
        <Space
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_row="2"/>
        <Space
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_row="3"/>
        <Space
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="4"
            android:layout_row="4"/>

    <TextView

        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/debug"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_columnSpan="10"
        android:layout_columnWeight="1"
        android:background="@drawable/background"
        android:backgroundTint="@color/background_tint"
        android:textAlignment="center"
        android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_debug_database_export"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:text="@string/export" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:text="@string/popups"
            android:layout_gravity="bottom"
            android:background="@drawable/background"
            android:backgroundTint="@color/background_tint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:text="@string/database"
            android:background="@drawable/background"
            android:backgroundTint="@color/background_tint"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_debug_result_popup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:hint="@string/input_hint" />

        <Button
        android:id="@+id/btn_debug_result_popup"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:text="@string/result_button"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_marginBottom="8dp"/>

</GridLayout>

    </LinearLayout>
