<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <!-- ImageView as background -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/braintalk" />

    <!-- Main container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Form container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Logo Image -->
            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:src="@drawable/tdahlogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Logo Text -->
            <TextView
                android:id="@+id/txt_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_logo"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#000000"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_logo" />

            <!-- Subheading -->
            <TextView
                android:id="@+id/txt_sub_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sub_logo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_logo" />

            <!-- Title for Name Input -->
            <TextView
                android:id="@+id/t_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/layout_in_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_sub_logo" />

            <!-- Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_in_name"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_50" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Title for Email Input -->
            <TextView
                android:id="@+id/t_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/layout_in_email"
                app:layout_constraintTop_toBottomOf="@+id/layout_in_name" />

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_in_email"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_50" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Title for Phone Input -->
            <TextView
                android:id="@+id/t_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/layout_in_phone"
                app:layout_constraintTop_toBottomOf="@+id/layout_in_email" />

            <!-- Phone Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_in_phone"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_50" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Title for Date Input -->
            <TextView
                android:id="@+id/t_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/layout_in_phone"
                app:layout_constraintTop_toBottomOf="@+id/layout_in_phone" />

            <!-- Date Input -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_in_date"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_date"
                    android:inputType="date"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_50" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Start Button -->
            <Button
                android:id="@+id/btn_start"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txt_start_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_in_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Admin Button -->
        <Button
            android:id="@+id/btn_admin"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/admin"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
